# Flash-iOS

./: .gitignore  CLAUDE.md  bench.py  progress.py  pyproject.toml  run.sh  stream_infer.py
.claude/: settings.json
.github/workflows/: build.yml
FlashMoE-iOS/Bridge/: FlashMoEBridge.swift
FlashMoE-iOS/FlashMoE.xcodeproj/: project.pbxproj
FlashMoE-iOS/FlashMoEEngine/: FlashMoEEngine.h  FlashMoEEngine.m
FlashMoE-iOS/Views/: ChatView.swift  ModelListView.swift  ProfilerView.swift
docs/: tiered-expert-quantization.md
metal_infer/: infer  infer.m  results.tsv  shaders.metal
