[project]
name = "ane-research"
version = "0.1.0"
description = "Pushing the edges of LLM inference on Apple Silicon"
requires-python = ">=3.12,<3.14"
dependencies = [
    "mlx>=0.24.0",
    "mlx-lm>=0.22.0",
    "huggingface-hub>=0.27.0",
    "safetensors>=0.5.0",
    "psutil>=6.0.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
]
